--- a/sensor_api_c/Makefile
+++ b/sensor_api_c/Makefile
@@ -1,34 +1,42 @@
-# Variables
+# Compiler and flags
 CC = gcc
-AR = ar
-CFLAGS = -Wall -Wextra -pedantic
-LIB_NAME = libmylibrary.a
+CFLAGS = -I./BME280_SensorAPI -Wall -Werror
+
+# Source directory
+SRC_DIR = BME280_SensorAPI
+
+# Build directory
+BUILD_DIR = build
 
 # Source files
-SRCS = bme280.c
-OBJS = $(SRCS:.c=.o)
+SOURCES = $(wildcard $(SRC_DIR)/*.c)
 
-# Main program
-MAIN_SRC = main.c
+# Object files placed in build directory
+OBJECTS = $(addprefix $(BUILD_DIR)/,$(notdir $(SOURCES:.c=.o)))
 
-# Default target
-all: $(LIB_NAME) 
+# Output library name in build directory
+TARGET = $(BUILD_DIR)/libbme280.a
 
-# Compile source files into object files
-%.o: %.c
+# Default rule
+all: $(BUILD_DIR) $(TARGET)
+
+# Make sure the build directory exists
+$(BUILD_DIR):
+	@mkdir -p $(BUILD_DIR)
+
+# Static library rule
+$(TARGET): $(OBJECTS)
+	@echo "Creating static library $@"
+	ar rcs $@ $(OBJECTS)
+
+# Compile rule
+$(BUILD_DIR)/%.o: $(SRC_DIR)/%.c
+	@echo "Compiling $< into $@"
 	$(CC) $(CFLAGS) -c $< -o $@
 
-# Create static library from object files
-$(LIB_NAME): $(OBJS)
-	$(AR) rcs $@ $^
-
-# # Compile the main program with the static library
-# $(TARGET): $(MAIN_SRC) $(LIB_NAME)
-# 	$(CC) $(CFLAGS) -o $@ $(MAIN_SRC) -L. -lmylibrary
-
-# Clean up build files
+# Clean rule
 clean:
-	rm -f $(OBJS) $(LIB_NAME) $(TARGET)
+	@echo "Cleaning up..."
+	rm -f $(OBJECTS) $(TARGET)
 
-# PHONY targets
 .PHONY: all clean
